--- a/nuxeo-platform-signature-web/pom.xml
+++ b/nuxeo-platform-signature-web/pom.xml
@@ -131,6 +131,10 @@
    <scope>test</scope>
   </dependency>
   <dependency>
+   <groupId>javax.servlet</groupId>
+   <artifactId>servlet-api</artifactId>
+  </dependency>
+  <dependency>
    <groupId>org.nuxeo.ecm.platform</groupId>
    <artifactId>nuxeo-platform-webapp-base</artifactId>
    <version>${nuxeo.platform.version}</version>
