--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,23 @@
   <parent>
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-ecm</artifactId>
-    <version>5.4.1-I20110302_0116</version>
+    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-jsf-parent</artifactId>
-  <version>5.4.1-I20110302_0116</version>
+  <version>5.4.1-I20110302_0116-SNAPSHOT</version>
   <name>Nuxeo JSF Parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo JSF: Parent.</description>
 
   <properties>
-    <nuxeo.common.version>5.4.1-I20110302_0116</nuxeo.common.version>
-    <nuxeo.runtime.version>5.4.1-I20110302_0116</nuxeo.runtime.version>
-    <nuxeo.core.version>5.4.1-I20110302_0116</nuxeo.core.version>
-    <nuxeo.services.version>5.4.1-I20110302_0116</nuxeo.services.version>
-    <nuxeo.jsf.version>5.4.1-I20110302_0116</nuxeo.jsf.version>
-    <nuxeo.theme.version>5.4.1-I20110302_0116</nuxeo.theme.version>
+    <nuxeo.common.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.common.version>
+    <nuxeo.runtime.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.runtime.version>
+    <nuxeo.core.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.core.version>
+    <nuxeo.services.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.services.version>
+    <nuxeo.jsf.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.jsf.version>
+    <nuxeo.theme.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.theme.version>
   </properties>
 
   <modules>
