--- a/nuxeo-runtime-test/pom.xml
+++ b/nuxeo-runtime-test/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.1-I20110302_0116</version>
+    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
