--- a/nuxeo-webengine-jaxrs/pom.xml
+++ b/nuxeo-webengine-jaxrs/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.4.1-I20110302_0116</version>
+    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-webengine-jaxrs</artifactId>
