move release branch 5.4.1-I20110302_0116 to SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Nuxeo Addons list</name>
   <packaging>pom</packaging>
   <description>Nuxeo Addons list</description>
-  <version>5.4.1-SNAPSHOT</version>
+  <version>5.4.1-I20110302_0116-SNAPSHOT</version>
 
   <scm>
     <connection>scm:hg:https://hg.nuxeo.org/addons</connection>
