deactivate server streaming

--- a/nuxeo-distribution-resources/src/main/resources/templates-jetty/default/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-jetty/default/config/nuxeo.properties
@@ -13,7 +13,7 @@ org.nuxeo.runtime.server.host=${org.nuxeo.ecm.instance.host}
 org.nuxeo.runtime.server.locator=socket://0.0.0.0:62474/?datatype=nuxeo
 
 # streaming config
-org.nuxeo.runtime.streaming.isServer=true
+org.nuxeo.runtime.streaming.isServer=false
 org.nuxeo.runtime.streaming.serverLocator=socket://${org.nuxeo.ecm.instance.host}:62474/?datatype=nuxeo
 
 # which sample to run
