deactivate server streaming

--- a/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-common/common/config/nuxeo.properties
@@ -6,7 +6,7 @@ org.nuxeo.ecm.product.version=5.4.1.1-SNAPSHOT
 org.nuxeo.runtime.server.locator=socket://${nuxeo.bind.address}:62474/?datatype=nuxeo
 
 # streaming config
-org.nuxeo.runtime.streaming.isServer=true
+org.nuxeo.runtime.streaming.isServer=false
 org.nuxeo.runtime.streaming.serverLocator=socket://${org.nuxeo.ecm.instance.host}:62474/?datatype=nuxeo
 
 # runtime management config
