--- a/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/config/nuxeo.properties
@@ -13,7 +13,7 @@ org.nuxeo.runtime.server.host=${org.nuxeo.ecm.instance.host}
 org.nuxeo.runtime.server.locator=socket://${nuxeo.bind.address}:62474/?datatype=nuxeo
 
 # streaming config
-org.nuxeo.runtime.streaming.isServer=true
+org.nuxeo.runtime.streaming.isServer=false
 org.nuxeo.runtime.streaming.serverLocator=socket://${org.nuxeo.ecm.instance.host}:62474/?datatype=nuxeo
 
 # runtime management config
