fix bad version name so it starts with nuxeo

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <description>The parent module for Nuxeo Platform Document Routing Addon</description>
 
   <properties>
-    <routing.version>5.4.1-I20110302_0116-SNAPSHOT</routing.version>
+    <nuxeo.routing.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.routing.version>
   </properties>
   <modules>
     <module>nuxeo-platform-document-routing-api</module>
@@ -37,17 +37,17 @@
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-document-routing-api</artifactId>
-        <version>${routing.version}</version>
+        <version>${nuxeo.routing.version}</version>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-document-routing-core</artifactId>
-        <version>${routing.version}</version>
+        <version>${nuxeo.routing.version}</version>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-document-routing-web</artifactId>
-        <version>${routing.version}</version>
+        <version>${nuxeo.routing.version}</version>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.automation</groupId>
