--- a/nuxeo-runtime-management-metrics/pom.xml
+++ b/nuxeo-runtime-management-metrics/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>nuxeo-runtime-parent</artifactId>
     <groupId>org.nuxeo.runtime</groupId>
-    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+    <version>5.4.1-I20110302_0116-1</version>
   </parent>
   <groupId>org.nuxeo.runtime</groupId>
   <artifactId>nuxeo-runtime-management-metrics</artifactId>
