--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+    <version>5.4.1-I20110302_0116-1</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.core</groupId>
   <artifactId>nuxeo-core-parent</artifactId>
-  <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+  <version>5.4.1-I20110302_0116-1</version>
   <name>Nuxeo Core Parent</name>
   <packaging>pom</packaging>
   <description>
@@ -19,10 +19,10 @@
   </description>
 
   <properties>
-    <nuxeo.runtime.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.runtime.version>
-    <nuxeo.common.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.common.version>
-    <nuxeo.core.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.core.version>
-    <nuxeo.platform.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.platform.version>
+    <nuxeo.runtime.version>5.4.1-I20110302_0116-1</nuxeo.runtime.version>
+    <nuxeo.common.version>5.4.1-I20110302_0116-1</nuxeo.common.version>
+    <nuxeo.core.version>5.4.1-I20110302_0116-1</nuxeo.core.version>
+    <nuxeo.platform.version>5.4.1-I20110302_0116-1</nuxeo.platform.version>
   </properties>
 
   <modules>
