--- a/nuxeo-platform-actions-core/pom.xml
+++ b/nuxeo-platform-actions-core/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+    <version>5.4.1-I20110302_0116-1</version>
   </parent>
 
   <artifactId>nuxeo-platform-actions-core</artifactId>
