--- a/nuxeo-platform-versioning-core/pom.xml
+++ b/nuxeo-platform-versioning-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+    <version>5.4.1-I20110302_0116-1</version>
   </parent>
 
   <artifactId>nuxeo-platform-versioning-core</artifactId>
