--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.1-I20110302_0116-SNAPSHOT</version>
+    <version>5.4.1-I20110302_0116-1</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -15,10 +15,10 @@
   <description>Build package distributions of nuxeo applications</description>
 
   <properties>
-    <nuxeo.dm.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.dm.version>
-    <nuxeo.opencmis.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.opencmis.version>
-    <nuxeo.distribution.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.distribution.version>
-    <nuxeo.addons.version>5.4.1-I20110302_0116-SNAPSHOT</nuxeo.addons.version>
+    <nuxeo.dm.version>5.4.1-I20110302_0116-1</nuxeo.dm.version>
+    <nuxeo.opencmis.version>5.4.1-I20110302_0116-1</nuxeo.opencmis.version>
+    <nuxeo.distribution.version>5.4.1-I20110302_0116-1</nuxeo.distribution.version>
+    <nuxeo.addons.version>5.4.1-I20110302_0116-1</nuxeo.addons.version>
   </properties>
 
   <modules>
