--- a/nuxeo-opensocial-features/build.xml
+++ b/nuxeo-opensocial-features/build.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
-<project name="nuxeo-opensocial-features" default="deploy" basedir=".">
+<project name="nuxeo-opensocial-features" default="deploy-webengine" basedir=".">
 
   <!-- From the pom.xml -->
   <property name="name" value="nuxeo-opensocial-features" />
-  <property name="version" value="${version}" />
 
   <!-- Create a build.properties file from build.properties.sample
        if you wish to override the JBoss paths -->
-  <property file="build.properties" />
+  <property file="../build.properties" />
   <property name="jboss.dir" value="/opt/jboss" />
+  <property name="tomcat.dir" value="/opt/jetty" />
 
   <property name="javac.debug" value="true" />
   <property name="javac.deprecation" value="false" />
@@ -18,8 +18,7 @@
   <property name="deploy.dir" value="${jboss.dir}/server/default/deploy" />
   <property name="nuxeo.ear" value="nuxeo.ear" />
   <property name="mvn.opts" value="" />
-  <property name="lm.portal.dir.web.module" value="${lm.portal.dir}/web/modules/org.nuxeo.opensocial.spaces" />
-  <property name="webeng.dir" value="${jboss.dir}/server/default/deploy" />
+  <property name="webengine.bundle.dir" value="${tomcat.dir}/bundles"/>
 
   <condition property="osfamily-unix">
     <os family="unix" />
@@ -29,6 +28,8 @@
   </condition>
 
   <target name="deploy" depends="install,copy" description="Build and copy to JBoss" />
+	
+  <target name="deploy-webengine" depends="install,copy-webengine" description="Build and copy to Web Engine"/>
 
   <target name="install" depends="install-unix,install-windows" description="Build" />
   <target name="install-unix" if="osfamily-unix">
@@ -47,15 +48,24 @@
   </target>
 
   <target name="copy" description="Copy files to JBoss">
-
     <echo message="${name}" />
-    <copy todir="${lm.portal.dir}/bundles/" overwrite="true">
+	<copy todir="${deploy.dir}/${nuxeo.ear}/system/" overwrite="true">
       <fileset dir="${build.dir}" casesensitive="yes">
         <include name="${name}-*.jar" />
         <exclude name="${name}-*-sources.jar" />
       </fileset>
     </copy>
     <!-- Could copy other files to .../config too -->
+  </target>
+
+  <target name="copy-webengine" description="Copy files to webengine">
+    <echo message="${name}" />
+	<copy todir="${webengine.bundle.dir}/" overwrite="true">
+  	  <fileset dir="${build.dir}" casesensitive="yes">
+  	    <include name="${name}-*.jar"/>
+  	    <exclude name="${name}-*-sources.jar"/>
+  	  </fileset>
+	</copy>
   </target>
 
   <target name="eclipseeclipse" depends="eclipseeclipse-unix,eclipseeclipse-windows" description="Build" />
@@ -72,12 +82,6 @@
       <arg value="eclipse:eclipse" />
       <arg value="${mvn.opts}" />
     </exec>
-  </target>
-
-  <target name="web" description="Copy resources to module">
-    <copy todir="${lm.portal.dir.web.module}" overwrite="true">
-      <fileset dir="${build.dir}/classes" />
-    </copy>
   </target>
 
 </project>
