--- a/nuxeo-user-dashboard/pom.xml
+++ b/nuxeo-user-dashboard/pom.xml
@@ -9,36 +9,35 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>nuxeo-user-dashboard</artifactId>
-  <name>Nuxeo User Dashboard</name>
-  <description>Nuxeo User Dashboard</description>
+  <artifactId>nuxeo-user-dashboard-parent</artifactId>
+  <name>Nuxeo User Dashboard Parent</name>
+  <description>Nuxeo User Dashboard Parent</description>
+  <packaging>pom</packaging>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.nuxeo.ecm.core</groupId>
-      <artifactId>nuxeo-core-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.opensocial</groupId>
-      <artifactId>nuxeo-opensocial-spaces</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-userworkspace-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-webapp-base</artifactId>
-    </dependency>
+  <modules>
+    <module>nuxeo-user-dashboard</module>
+    <module>nuxeo-user-dashboard-jsf</module>
+    <module>nuxeo-user-dashboard-opensocial</module>
+  </modules>
 
-    <dependency>
-      <groupId>org.jboss.seam</groupId>
-      <artifactId>jboss-seam</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>jsf-api</artifactId>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-user-dashboard</artifactId>
+        <version>${nuxeo.user.center.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-user-dashboard-jsf</artifactId>
+        <version>${nuxeo.user.center.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-user-dashboard-opensocial</artifactId>
+        <version>${nuxeo.user.center.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
 </project>
