NXP-6413: add new nuxeo-user-dashboard-* modules to nuxeo-cap and nuxeo-dm

--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,16 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-user-dashboard-jsf</artifactId>
+        <version>${nuxeo.addons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-user-dashboard-opensocial</artifactId>
+        <version>${nuxeo.addons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-user-notification</artifactId>
         <version>${nuxeo.addons.version}</version>
       </dependency>
