--- a/nuxeo-distribution-dm/pom.xml
+++ b/nuxeo-distribution-dm/pom.xml
@@ -253,7 +253,7 @@
     <!-- User Center -->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-user-dashboard</artifactId>
+      <artifactId>nuxeo-user-dashboard-opensocial</artifactId>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
