--- a/nuxeo-platform-jbpm/nuxeo-platform-jbpm-api/pom.xml
+++ b/nuxeo-platform-jbpm/nuxeo-platform-jbpm-api/pom.xml
@@ -23,6 +23,10 @@
       <artifactId>nuxeo-core-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-query-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <scope>test</scope>
