--- a/nuxeo-platform-jbpm/nuxeo-platform-jbpm-core/pom.xml
+++ b/nuxeo-platform-jbpm/nuxeo-platform-jbpm-core/pom.xml
@@ -113,6 +113,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-query-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>net.sf.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>1.7</version>
