--- a/nuxeo-core-storage-sql/pom.xml
+++ b/nuxeo-core-storage-sql/pom.xml
@@ -4,8 +4,10 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>1.5.0-RC1-SP3</version>
+    <version>1.5.0-RC1-SP4</version>
   </parent>
+
+  <version>1.5.0-RC1-SP4</version>
 
   <artifactId>nuxeo-core-storage-sql</artifactId>
   <name>Nuxeo Core SQL Storage</name>
@@ -156,5 +158,21 @@
       </plugin>
     </plugins>
   </build>
+
+      <distributionManagement>
+    <repository>
+      <id>public-releases</id>
+      <url>
+        http://maven.in.nuxeo.com/nexus/content/repositories/public-releases
+      </url>
+    </repository>
+    <snapshotRepository>
+      <id>public-snapshots</id>
+      <url>
+        http://maven.in.nuxeo.com/nexus/content/repositories/public-snapshots
+      </url>
+      <uniqueVersion>true</uniqueVersion>
+    </snapshotRepository>
+      </distributionManagement>
 
 </project>
