--- a/nuxeo-opensocial-gadgets/src/main/resources/gadget/userdeleteddocuments/dynamic_messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/gadget/userdeleteddocuments/dynamic_messages.properties
@@ -5,3 +5,4 @@ action.nuxeo.oauth.refresh=Refresh
 label.dublincore.title=Whatever
 label.dublincore.modified=Whatever
 label.dublincore.creator=Whatever
+label.gadget.no.document=Whatever
