--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-I20110404_0115</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.distribution</groupId>
@@ -16,10 +16,10 @@
   <description>Build package distributions of nuxeo applications</description>
 
   <properties>
-    <nuxeo.dm.version>5.4.2-SNAPSHOT</nuxeo.dm.version>
-    <nuxeo.opencmis.version>5.4.2-SNAPSHOT</nuxeo.opencmis.version>
-    <nuxeo.distribution.version>5.4.2-SNAPSHOT</nuxeo.distribution.version>
-    <nuxeo.addons.version>5.4.2-SNAPSHOT</nuxeo.addons.version>
+    <nuxeo.dm.version>5.4.2-I20110404_0115</nuxeo.dm.version>
+    <nuxeo.opencmis.version>5.4.2-I20110404_0115</nuxeo.opencmis.version>
+    <nuxeo.distribution.version>5.4.2-I20110404_0115</nuxeo.distribution.version>
+    <nuxeo.addons.version>5.4.2-I20110404_0115</nuxeo.addons.version>
   </properties>
 
   <modules>
