--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-I20110404_0115</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.core</groupId>
@@ -27,7 +27,7 @@
 
   <properties>
     <chemistry.opencmis.version>0.3.0</chemistry.opencmis.version>
-    <nuxeo.version>5.4.2-SNAPSHOT</nuxeo.version>
+    <nuxeo.version>5.4.2-I20110404_0115</nuxeo.version>
   </properties>
 
   <dependencyManagement>
