--- a/nuxeo-user-settings/nuxeo-user-settings-api/pom.xml
+++ b/nuxeo-user-settings/nuxeo-user-settings-api/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-user-settings-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-I20110404_0115</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
