NXP-6618: improve tooltips

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -3,6 +3,7 @@ white=#ffffff
 blue.lite=#f2f7fc
 blue.sky=#ddeeff
 info=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/tip.gif) 2px 3px no-repeat
+tooltip=#f2f7fc url(${org.nuxeo.ecm.contextPath}/icons/lightbulb.png) 2px 3px no-repeat scroll
 topbar=#282b2e url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/small_gray_bar.png) top left repeat-x
 breadcrumb=#eeeff0
 buttons=#cecfd1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/buttons.png) top left repeat-x
