--- a/nuxeo-distribution-dm/ftest/selenium/ffprofile/prefs.js.sample
+++ b/nuxeo-distribution-dm/ftest/selenium/ffprofile/prefs.js.sample
@@ -1,3 +1,5 @@
+// DEPRECATED: see https://github.com/nuxeo/tools-nuxeo-ftest
+
 // Disable security restrictions on upload
 // The url is set at runtime by the run.sh script
 user_pref("signed.applets.codebase_principal_support", true);
@@ -5,7 +7,7 @@ user_pref("capability.principal.codebase.p0.granted", "UniversalFileRead");
 user_pref("capability.principal.codebase.p0.id", "http://localhost:8080");
 user_pref("capability.principal.codebase.p0.subjectName", "");
 
-// Set english as default language
+// Set English as default language
 user_pref("general.useragent.locale", "en");
 user_pref("intl.accept_languages", "en");
 
