NXP-6326: add styling

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-colors.properties
@@ -4,6 +4,7 @@ breadcrumblink=#666666
 titles=#5c5c5c
 summary.titles=#848484
 foldablebox.titles=#ffffff
+foldablelightbox.titles=#666666
 tableheader=#666666
 tabslink=#0066cc
 tablink.active=#ffffff
