--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/galaxy-backgrounds.properties
@@ -12,6 +12,7 @@ maincell=#fff url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/galaxy_logo.png)
 tablethead=#f1f2f3
 tableevenlines=#ecf6ff
 tabiselected=#4e9ae1
+tabiselectelight=#ffffff
 subtabiselected=#dde2e7
 rss=#ff9d5c
 orange.lite=#ffd9a3
@@ -24,6 +25,8 @@ search=#fff url(${org.nuxeo.ecm.contextPath}/icons/search.gif) 2px 2px no-repeat
 clipboardcopy=#adf url(${org.nuxeo.ecm.contextPath}/icons/action_clipboard_copy.gif) no-repeat 98% 3%
 folded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_folded.gif) top left no-repeat
 unfolded=#4e9ae1 url(${org.nuxeo.ecm.contextPath}/img/theme_galaxy/arrow_unfolded.gif) top left no-repeat
+foldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_folded.gif) top left no-repeat
+unfoldedlight=#ffffff url(${org.nuxeo.ecm.contextPath}/icons/arrow_unfolded.gif) top left no-repeat
 comment=transparent url(${org.nuxeo.ecm.contextPath}/icons/comment.gif) no-repeat 4px 4px
 required=transparent url(${org.nuxeo.ecm.contextPath}/icons/required.gif) top right no-repeat
 addmanager=transparent url(${org.nuxeo.ecm.contextPath}/img/rightsadd_bar.gif) no-repeat center
